--- a/Data-Analysis-Tutorial.ipynb
+++ b/Data-Analysis-Tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fc6e60e6",
+   "id": "19b6f36e",
    "metadata": {},
    "source": [
     "TODO: REVISE\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec88d628",
+   "id": "672f4e59",
    "metadata": {},
    "source": [
     "TODO: WHERE IS DATA FROM"
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f3deab9",
+   "id": "0a3e04f8",
    "metadata": {},
    "source": [
     "TODO: TAKE A LOOK PROSE"
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "19970998",
+   "id": "d1bd373f",
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de8426eb",
+   "id": "3e64148e",
    "metadata": {},
    "source": [
     "TODO: UNKNOWN VALUES, USEFUL COLUMNS. WANT MORE DATA ON PROTEIN: UNIPROTKB. GRAPH OBSERVATION\n",
@@ -615,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "bd08a26e",
+   "id": "7bc9c91f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc01f298",
+   "id": "f6f6e81f",
    "metadata": {},
    "source": [
     "### Querying\n",
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "102fb2d3",
+   "id": "cde0cada",
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "93fec968",
+   "id": "5eb6b6e3",
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "cb48bdcf",
+   "id": "57611dd6",
    "metadata": {},
    "outputs": [
     {
@@ -1549,7 +1549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2f93489",
+   "id": "2ee6efd3",
    "metadata": {},
    "source": [
     "LOOK AT \"INVOLVEMENT IN DISEASE\", \"GENE ONTOLOGY (GO)\", \"DOMAIN [FT]\""
@@ -1558,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": 317,
-   "id": "f98c239e",
+   "id": "5499e913",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 318,
-   "id": "2850b7c4",
+   "id": "5ef3fb7f",
    "metadata": {},
    "outputs": [
     {
@@ -1819,7 +1819,7 @@
   {
    "cell_type": "code",
    "execution_count": 352,
-   "id": "253e35cb",
+   "id": "7ab1151b",
    "metadata": {},
    "outputs": [
     {
@@ -2069,7 +2069,7 @@
   {
    "cell_type": "code",
    "execution_count": 353,
-   "id": "ed54e3a3",
+   "id": "63d6dc65",
    "metadata": {},
    "outputs": [
     {
@@ -2325,7 +2325,7 @@
   {
    "cell_type": "code",
    "execution_count": 282,
-   "id": "dd35decc",
+   "id": "f5e25030",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2336,7 +2336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "859c9511",
+   "id": "84f940e9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2344,7 +2344,7 @@
   {
    "cell_type": "code",
    "execution_count": 269,
-   "id": "4c3d3459",
+   "id": "adaedfda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2356,8 +2356,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
-   "id": "a967fdff",
+   "execution_count": 360,
+   "id": "a7da5e76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2370,7 +2370,7 @@
   {
    "cell_type": "code",
    "execution_count": 355,
-   "id": "1139185d",
+   "id": "bfea544b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2382,7 +2382,7 @@
   {
    "cell_type": "code",
    "execution_count": 357,
-   "id": "f83d91e4",
+   "id": "720d6bfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2393,22 +2393,268 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "76f348b2",
+   "execution_count": 361,
+   "id": "548f731b",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# betweenness centrality\n",
-    "a = nx.betweenness_centrality(G)\n",
-    "fullProtDF[\"Betweenness_Centrality\"] = fullProtDF[\"innateDB_ID\"].apply(lambda x: a.get(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f7e3b63",
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>innateDB_ID</th>\n",
+       "      <th>alias</th>\n",
+       "      <th>UniprotID</th>\n",
+       "      <th>Entry</th>\n",
+       "      <th>Entry name</th>\n",
+       "      <th>Organism</th>\n",
+       "      <th>Mass</th>\n",
+       "      <th>Length</th>\n",
+       "      <th>Tissue specificity</th>\n",
+       "      <th>Involvement in disease</th>\n",
+       "      <th>Subcellular location [CC]</th>\n",
+       "      <th>Gene ontology (GO)</th>\n",
+       "      <th>Domain [CC]</th>\n",
+       "      <th>Protein families</th>\n",
+       "      <th>Domain [FT]</th>\n",
+       "      <th>Degree_Centrality</th>\n",
+       "      <th>flMass</th>\n",
+       "      <th>MIM</th>\n",
+       "      <th>Domain_ID</th>\n",
+       "      <th>GO_ID</th>\n",
+       "      <th>Closeness_Centrality</th>\n",
+       "      <th>Eigenvector_Centrality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>innatedb:IDBG-1</td>\n",
+       "      <td>refseq:NP_003131|uniprotkb:Q05066|uniprotkb:SR...</td>\n",
+       "      <td>Q05066</td>\n",
+       "      <td>Q05066</td>\n",
+       "      <td>SRY_HUMAN</td>\n",
+       "      <td>Homo sapiens (Human)</td>\n",
+       "      <td>23,884</td>\n",
+       "      <td>204.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DISEASE: 46,XY sex reversal 1 (SRXY1) [MIM:400...</td>\n",
+       "      <td>SUBCELLULAR LOCATION: Nucleus speckle {ECO:000...</td>\n",
+       "      <td>chromatin [GO:0000785]; cytoplasm [GO:0005737]...</td>\n",
+       "      <td>DOMAIN: DNA binding and bending properties of ...</td>\n",
+       "      <td>SRY family</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000953</td>\n",
+       "      <td>23884.0</td>\n",
+       "      <td>[400044, 400045]</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[0000785, 0005737, 0016607, 0005654, 0005634, ...</td>\n",
+       "      <td>0.321910</td>\n",
+       "      <td>0.001644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>innatedb:IDBG-100000</td>\n",
+       "      <td>uniprotkb:LPAR3_HUMAN|refseq:NP_036284|uniprot...</td>\n",
+       "      <td>Q9UBY5</td>\n",
+       "      <td>Q9UBY5</td>\n",
+       "      <td>LPAR3_HUMAN</td>\n",
+       "      <td>Homo sapiens (Human)</td>\n",
+       "      <td>40,128</td>\n",
+       "      <td>353.0</td>\n",
+       "      <td>TISSUE SPECIFICITY: Most abundantly expressed ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SUBCELLULAR LOCATION: Cell membrane; Multi-pas...</td>\n",
+       "      <td>axon [GO:0030424]; cytoplasm [GO:0005737]; int...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>G-protein coupled receptor 1 family</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000079</td>\n",
+       "      <td>40128.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[0030424, 0005737, 0005887, 0005886, 0045202, ...</td>\n",
+       "      <td>0.297747</td>\n",
+       "      <td>0.000734</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>innatedb:IDBG-100012</td>\n",
+       "      <td>uniprotkb:Q8IWG1|uniprotkb:WDR63_HUMAN|refseq:...</td>\n",
+       "      <td>Q8IWG1</td>\n",
+       "      <td>Q8IWG1</td>\n",
+       "      <td>DNAI3_HUMAN</td>\n",
+       "      <td>Homo sapiens (Human)</td>\n",
+       "      <td>102,935</td>\n",
+       "      <td>891.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DISEASE: Note=A rare heterozygous in-frame DNA...</td>\n",
+       "      <td>SUBCELLULAR LOCATION: Cytoplasm {ECO:0000269|P...</td>\n",
+       "      <td>axonemal dynein complex [GO:0005858]; cytoplas...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000040</td>\n",
+       "      <td>102935.0</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[0005858, 0005737, 0036156, 0071933, 0045504, ...</td>\n",
+       "      <td>0.264544</td>\n",
+       "      <td>0.000114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>innatedb:IDBG-10002</td>\n",
+       "      <td>refseq:NP_056518|uniprotkb:Q9Y3A4|uniprotkb:RR...</td>\n",
+       "      <td>Q9Y3A4</td>\n",
+       "      <td>Q9Y3A4</td>\n",
+       "      <td>RRP7A_HUMAN</td>\n",
+       "      <td>Homo sapiens (Human)</td>\n",
+       "      <td>32,334</td>\n",
+       "      <td>280.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CURI complex [GO:0032545]; cytoplasm [GO:00057...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>RRP7 family</td>\n",
+       "      <td>DOMAIN 61..90;  /note=\"RRM\"</td>\n",
+       "      <td>0.001033</td>\n",
+       "      <td>32334.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[RRM]</td>\n",
+       "      <td>[0032545, 0005737, 0005654, 0034456, 0003723, ...</td>\n",
+       "      <td>0.349394</td>\n",
+       "      <td>0.006516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>innatedb:IDBG-100021</td>\n",
+       "      <td>uniprotkb:MCLN3_HUMAN|uniprotkb:Q8TDD5|refseq:...</td>\n",
+       "      <td>Q8TDD5</td>\n",
+       "      <td>Q8TDD5</td>\n",
+       "      <td>MCLN3_HUMAN</td>\n",
+       "      <td>Homo sapiens (Human)</td>\n",
+       "      <td>64,248</td>\n",
+       "      <td>553.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SUBCELLULAR LOCATION: Cell membrane {ECO:00002...</td>\n",
+       "      <td>autophagosome membrane [GO:0000421]; early end...</td>\n",
+       "      <td>DOMAIN: The most N-terminal extracellular/lume...</td>\n",
+       "      <td>Transient receptor (TC 1.A.4) family, Polycyst...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000079</td>\n",
+       "      <td>64248.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[0000421, 0031901, 0016021, 0031902, 0005765, ...</td>\n",
+       "      <td>0.346118</td>\n",
+       "      <td>0.002906</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            innateDB_ID                                              alias  \\\n",
+       "0       innatedb:IDBG-1  refseq:NP_003131|uniprotkb:Q05066|uniprotkb:SR...   \n",
+       "1  innatedb:IDBG-100000  uniprotkb:LPAR3_HUMAN|refseq:NP_036284|uniprot...   \n",
+       "2  innatedb:IDBG-100012  uniprotkb:Q8IWG1|uniprotkb:WDR63_HUMAN|refseq:...   \n",
+       "3   innatedb:IDBG-10002  refseq:NP_056518|uniprotkb:Q9Y3A4|uniprotkb:RR...   \n",
+       "4  innatedb:IDBG-100021  uniprotkb:MCLN3_HUMAN|uniprotkb:Q8TDD5|refseq:...   \n",
+       "\n",
+       "  UniprotID   Entry   Entry name              Organism     Mass  Length  \\\n",
+       "0    Q05066  Q05066    SRY_HUMAN  Homo sapiens (Human)   23,884   204.0   \n",
+       "1    Q9UBY5  Q9UBY5  LPAR3_HUMAN  Homo sapiens (Human)   40,128   353.0   \n",
+       "2    Q8IWG1  Q8IWG1  DNAI3_HUMAN  Homo sapiens (Human)  102,935   891.0   \n",
+       "3    Q9Y3A4  Q9Y3A4  RRP7A_HUMAN  Homo sapiens (Human)   32,334   280.0   \n",
+       "4    Q8TDD5  Q8TDD5  MCLN3_HUMAN  Homo sapiens (Human)   64,248   553.0   \n",
+       "\n",
+       "                                  Tissue specificity  \\\n",
+       "0                                                NaN   \n",
+       "1  TISSUE SPECIFICITY: Most abundantly expressed ...   \n",
+       "2                                                NaN   \n",
+       "3                                                NaN   \n",
+       "4                                                NaN   \n",
+       "\n",
+       "                              Involvement in disease  \\\n",
+       "0  DISEASE: 46,XY sex reversal 1 (SRXY1) [MIM:400...   \n",
+       "1                                                NaN   \n",
+       "2  DISEASE: Note=A rare heterozygous in-frame DNA...   \n",
+       "3                                                NaN   \n",
+       "4                                                NaN   \n",
+       "\n",
+       "                           Subcellular location [CC]  \\\n",
+       "0  SUBCELLULAR LOCATION: Nucleus speckle {ECO:000...   \n",
+       "1  SUBCELLULAR LOCATION: Cell membrane; Multi-pas...   \n",
+       "2  SUBCELLULAR LOCATION: Cytoplasm {ECO:0000269|P...   \n",
+       "3                                                NaN   \n",
+       "4  SUBCELLULAR LOCATION: Cell membrane {ECO:00002...   \n",
+       "\n",
+       "                                  Gene ontology (GO)  \\\n",
+       "0  chromatin [GO:0000785]; cytoplasm [GO:0005737]...   \n",
+       "1  axon [GO:0030424]; cytoplasm [GO:0005737]; int...   \n",
+       "2  axonemal dynein complex [GO:0005858]; cytoplas...   \n",
+       "3  CURI complex [GO:0032545]; cytoplasm [GO:00057...   \n",
+       "4  autophagosome membrane [GO:0000421]; early end...   \n",
+       "\n",
+       "                                         Domain [CC]  \\\n",
+       "0  DOMAIN: DNA binding and bending properties of ...   \n",
+       "1                                                NaN   \n",
+       "2                                                NaN   \n",
+       "3                                                NaN   \n",
+       "4  DOMAIN: The most N-terminal extracellular/lume...   \n",
+       "\n",
+       "                                    Protein families  \\\n",
+       "0                                         SRY family   \n",
+       "1                G-protein coupled receptor 1 family   \n",
+       "2                                                NaN   \n",
+       "3                                        RRP7 family   \n",
+       "4  Transient receptor (TC 1.A.4) family, Polycyst...   \n",
+       "\n",
+       "                   Domain [FT]  Degree_Centrality    flMass               MIM  \\\n",
+       "0                          NaN           0.000953   23884.0  [400044, 400045]   \n",
+       "1                          NaN           0.000079   40128.0              None   \n",
+       "2                          NaN           0.000040  102935.0                []   \n",
+       "3  DOMAIN 61..90;  /note=\"RRM\"           0.001033   32334.0              None   \n",
+       "4                          NaN           0.000079   64248.0              None   \n",
+       "\n",
+       "  Domain_ID                                              GO_ID  \\\n",
+       "0      None  [0000785, 0005737, 0016607, 0005654, 0005634, ...   \n",
+       "1      None  [0030424, 0005737, 0005887, 0005886, 0045202, ...   \n",
+       "2      None  [0005858, 0005737, 0036156, 0071933, 0045504, ...   \n",
+       "3     [RRM]  [0032545, 0005737, 0005654, 0034456, 0003723, ...   \n",
+       "4      None  [0000421, 0031901, 0016021, 0031902, 0005765, ...   \n",
+       "\n",
+       "   Closeness_Centrality  Eigenvector_Centrality  \n",
+       "0              0.321910                0.001644  \n",
+       "1              0.297747                0.000734  \n",
+       "2              0.264544                0.000114  \n",
+       "3              0.349394                0.006516  \n",
+       "4              0.346118                0.002906  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(fullProtDF.head())"
    ]
@@ -2416,7 +2662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c850f37c",
+   "id": "52c68285",
    "metadata": {},
    "outputs": [],
    "source": []
