--- a/Data-Analysis-Tutorial.ipynb
+++ b/Data-Analysis-Tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "19b6f36e",
+   "id": "5946febd",
    "metadata": {},
    "source": [
     "TODO: REVISE\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 362,
    "id": "6dbd8c1f",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "672f4e59",
+   "id": "02e385d3",
    "metadata": {},
    "source": [
     "TODO: WHERE IS DATA FROM"
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a3e04f8",
+   "id": "dabb4d26",
    "metadata": {},
    "source": [
     "TODO: TAKE A LOOK PROSE"
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "d1bd373f",
+   "id": "3eda1930",
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e64148e",
+   "id": "113a81d8",
    "metadata": {},
    "source": [
     "TODO: UNKNOWN VALUES, USEFUL COLUMNS. WANT MORE DATA ON PROTEIN: UNIPROTKB. GRAPH OBSERVATION\n",
@@ -615,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "7bc9c91f",
+   "id": "89b29691",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6f6e81f",
+   "id": "9f021a65",
    "metadata": {},
    "source": [
     "### Querying\n",
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "cde0cada",
+   "id": "b7e3cfa1",
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "5eb6b6e3",
+   "id": "c9db92cd",
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "57611dd6",
+   "id": "4dc65211",
    "metadata": {},
    "outputs": [
     {
@@ -1549,7 +1549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ee6efd3",
+   "id": "25a8216c",
    "metadata": {},
    "source": [
     "LOOK AT \"INVOLVEMENT IN DISEASE\", \"GENE ONTOLOGY (GO)\", \"DOMAIN [FT]\""
@@ -1558,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": 317,
-   "id": "5499e913",
+   "id": "fcaa9666",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 318,
-   "id": "5ef3fb7f",
+   "id": "c89985fc",
    "metadata": {},
    "outputs": [
     {
@@ -1819,7 +1819,7 @@
   {
    "cell_type": "code",
    "execution_count": 352,
-   "id": "7ab1151b",
+   "id": "34f040f6",
    "metadata": {},
    "outputs": [
     {
@@ -2069,7 +2069,7 @@
   {
    "cell_type": "code",
    "execution_count": 353,
-   "id": "63d6dc65",
+   "id": "b6d9629e",
    "metadata": {},
    "outputs": [
     {
@@ -2325,7 +2325,7 @@
   {
    "cell_type": "code",
    "execution_count": 282,
-   "id": "f5e25030",
+   "id": "4e87abf3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2336,7 +2336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84f940e9",
+   "id": "e6d0175b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2344,7 +2344,7 @@
   {
    "cell_type": "code",
    "execution_count": 269,
-   "id": "adaedfda",
+   "id": "b94e4b07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2357,7 +2357,7 @@
   {
    "cell_type": "code",
    "execution_count": 360,
-   "id": "a7da5e76",
+   "id": "0381a1bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2370,7 +2370,7 @@
   {
    "cell_type": "code",
    "execution_count": 355,
-   "id": "bfea544b",
+   "id": "e5bce2c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2382,7 +2382,7 @@
   {
    "cell_type": "code",
    "execution_count": 357,
-   "id": "720d6bfb",
+   "id": "843fa053",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2394,7 +2394,7 @@
   {
    "cell_type": "code",
    "execution_count": 361,
-   "id": "548f731b",
+   "id": "ae36ed5b",
    "metadata": {},
    "outputs": [
     {
@@ -2660,9 +2660,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "beebe44c",
+   "metadata": {},
+   "source": [
+    "## Linear Regression Time"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52c68285",
+   "id": "a6b2b8c3",
    "metadata": {},
    "outputs": [],
    "source": []
